--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@
 body {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
 
     font-family: Trebuchet MS, Arial, sans-serif;
 }
@@ -91,11 +91,16 @@ body {
     color: #777;
 }
 
-.menucolumn .select { padding: 0.5em 0.8em; }
+.menucolumn .select {
+    flex: 1;
+    padding: 0.5em 0.8em;
+    -webkit-user-select: none;
+}
 
 .select i { font-size: 80%; letter-spacing: 1px; }
 .select ul { list-style: none; }
 
+.select ul li { transition: all 100ms; }
 .select ul li:hover { color: #ccc; text-shadow: 0 0 1px #000; }
 .select ul li:active { color: #6D92B8; text-shadow: 0 0 1px #16528A; }
 .select ul li[selected] { color: #eee; }
@@ -112,8 +117,23 @@ body {
 .select ul li h4 span::before { content: "Highest score: "; }
 .select ul li h4 span { font-size: 60%; }
 
-.select {
-    -webkit-user-select: none;
+
+.settings {
+    background: #111;
+    padding: 0.8em 0.4em;
+}
+
+.settings input[type=button] {
+    cursor: pointer;
+    background: #040404;
+    padding: 0.5em;
+    color: #D7D7D7;
+    border: 1px solid #FFFFFF;
+    border-radius: 0.2em;
+    transition: all 200ms;
+}
+.settings input[type=button]:hover {
+    color: #909090;
 }
 
 /* MAIN BODY STYLING */
