--- a/main.css
+++ b/main.css
@@ -194,3 +194,28 @@ footer {
     letter-spacing: 1px;
     color: #bbb;
 }
+
+
+
+/* NO SCRIPT ACESSABILITY STUFFS */
+
+noscript {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    background: rgba(0,0,0,0.5);
+    text-align: center;
+    padding: 40% 0;
+}
+
+noscript .no-js {
+    background: #111;
+    background: rgba(0,0,0,0.8);
+    color: #fafafa;
+    padding: 2em;
+}
+
+noscript .no-js a {
+    color: #007DCC;
+}
