--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body {
     background: #3B3B3B;
     border: 1px solid #111;
     color: #eee;
+    min-width: 15em;
 
     box-shadow: 0.1em 0 0.2em #444;
 }
