--- a/main.css
+++ b/main.css
@@ -31,6 +31,7 @@ body {
 }
 .maincolumn {
     flex: 7;
+    min-width: 23em;
     display: flex;
     flex-direction: column;
     align-items: center;
