--- a/main.css
+++ b/main.css
@@ -197,6 +197,7 @@ main input[type=text] {
     border: 1px solid #000;
     border-radius: 0.3em;
     width: 99%;
+    transition: box-shadow 250ms;
 }
 
 /* FOOTER */
