--- a/main.css
+++ b/main.css
@@ -124,10 +124,12 @@ body {
 .menucolumn .select ul li[selected] small { color: #bbb; }
 .menucolumn .select ul li small { color: #999; font-family: monospace; }
 
-.menucolumn .select ul li span { vertical-align: middle; font-size: 50%; }
-.menucolumn .select ul li span[true]::before { content: ' passed'; color: #87E911; }
-.menucolumn .select ul li span[false]::before { content: ' incomplete'; color: #E9AF11; }
-.menucolumn .select ul li span[null]::before { content: ''; color: #868686; }
+.menucolumn .select ul li span { vertical-align: baseline; font-size: 60%; }
+.menucolumn .select ul li span[progression="0"]::before { content: ''; color: #868686; }
+.menucolumn .select ul li span[progression="1"]::before { content: ' incomplete'; color: #C5B773; }
+.menucolumn .select ul li span[progression="2"]::before { content: ' passed'; color: #00BF04; }
+.menucolumn .select ul li span[progression="3"]::before { content: ' expert'; color: #BAFF00; }
+.menucolumn .select ul li span[progression="4"]::before { content: ' master'; color: #C765FF; }
 
 .menucolumn .select ul li h4 span::before { content: " Highest score: "; }
 .menucolumn .select ul li h4 span { font-size: 60%; color: #959595; }
