--- a/main.css
+++ b/main.css
@@ -44,6 +44,7 @@ body {
 /* MENU BLOCK */
 
 .menucolumn .logo {
+    cursor: default;
     padding: 0.9em 0.8em;
     background: #111;
 
@@ -66,6 +67,10 @@ body {
     line-height: 1.4;
     background: #222;
     padding: 0.5em 0.8em;
+}
+
+.menucolumn .readout {
+    cursor: default;
 }
 
 .menucolumn .readout p.levelinfo {
@@ -194,6 +199,7 @@ main .numbar a.skip {
 }
 
 main p.generated {
+    cursor: default;
     white-space: nowrap;
     margin-bottom: 0.2em;
     text-align: center;
@@ -216,6 +222,7 @@ main input[type=text] {
 /* FOOTER */
 
 footer {
+    cursor: default;
     margin-top: 2em;
     font-size: 80%;
     font-style: italic;
@@ -223,8 +230,12 @@ footer {
     color: #bbb;
     width: 80%;
     text-align: center;
+    transition: color 500ms;
 }
 
+footer:hover {
+    color: #333;
+}
 
 
 /* NO SCRIPT ACESSABILITY STUFFS */
