Added: Slide out panel
Getting ready to implement the learning assistant.
Found out that the main program is not enough - people
(including me) need some help to keep learning :P

--- a/main.css
+++ b/main.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-direction: row;
     min-height: 100vh;
+    overflow-x: hidden;
     /*min-width: 50em;*/
 
     font-family: Trebuchet MS, Arial, sans-serif;
@@ -31,6 +32,7 @@ body {
 
     box-shadow: 0.1em 0 0.2em #444;
 }
+
 .maincolumn {
     flex: 7;
     /*min-width: 23em;*/
@@ -40,6 +42,60 @@ body {
     justify-content: center;
 }
 
+
+.assistantcolumn .button span::before {
+    content: ">";
+}
+
+.assistantcolumn[hidden] .button span::before {
+    content: "<";
+}
+
+.assistantcolumn .button span {
+    font-family: Arial;
+    font-weight: 600;
+}
+
+.assistantcolumn .button {
+    display: flex;
+    width: 1.2em;
+    cursor: pointer;
+    background: #111;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s;
+}
+
+.assistantcolumn .panel {
+    flex: 1;
+    transition: all 1s;
+}
+
+.assistantcolumn {
+    display: flex;
+    flex-direction: row;
+    min-width: 12.5em;
+
+    flex: 1.2;
+    width: 100%;
+    background: #747474;
+    transition: all 1s;
+}
+
+
+.assistantcolumn[hidden] .button {
+    padding: 0 0.5em;
+}
+.assistantcolumn[hidden] .panel {
+    background: #222;
+    opacity: 0.25;
+}
+.assistantcolumn[hidden] {
+    overflow: hidden;
+    flex:0;
+    min-width: 1.5em;
+}
 
 /* MENU BLOCK */
 
