--- a/sass/imports/input_styles.scss
+++ b/sass/imports/input_styles.scss
@@ -7,26 +7,26 @@ input[type=button], button {
 
     font-family: monospace;
     font-size: 85%;
-    color: #D7D7D7;
+    color: $white2;
 
-    background: #040404;
+    background: $black2;
     cursor: pointer;
     border-width: 1px;
-    border-color: #888;
+    border-color: $grey2;
     border-radius: 0.2em;
 
     transition: all 120ms;
 }
 
 input[name=theme]:hover {
-    color: #909090 !important;
+    color: $grey2 !important;
 }
 
 input[name=reset]:hover {
     font-weight: 600;
-    color: #fff;
+    color: $white1;
 
-    background: #FF0000 !important;
+    background: $red1 !important;
 }
 
 
@@ -34,11 +34,11 @@ input[type=text], input[type=number] {
     width: 99%;
     padding: 0.3em 0.2em;
 
-    color: #222;
+    color: $grey1;
     text-align: center;
 
     border-radius: 0.3em;
-    border: 1px solid #000;
+    border: 1px solid $black1;
 
     transition: box-shadow 250ms;
 }
