--- a/sass/imports/main_view.scss
+++ b/sass/imports/main_view.scss
@@ -17,7 +17,7 @@ main {
     & p.generated {
         margin-bottom: 0.2em;
 
-        color: #222;
+        color: $grey1;
         text-align: center;
         font-size: 500%;
         font-weight: bold;
@@ -43,7 +43,7 @@ main {
             flex: 1;
         }
         & a.skip {
-            color: #111;
+            color: $grey1;
             cursor: pointer;
         }
     }
@@ -61,13 +61,13 @@ footer {
     font-style: italic;
     letter-spacing: 1px;
     text-align: center;
-    color: #bbb;
+    color: $grey3;
 
     cursor: default;
 
     transition: color 500ms;
 
     &:hover {
-        color: #333;
+        color: $grey1;
     }
 }
