--- a/sass/imports/noscript.scss
+++ b/sass/imports/noscript.scss
@@ -7,20 +7,20 @@ noscript {
 
     text-align: center;
 
-    background: #333;
+    background: $grey1;
     background: rgba(0,0,0,0.5);
 
     & .no-js {
         padding: 2em;
 
-        color: #fafafa;
+        color: $white1;
 
-        background: #111;
+        background: $grey1;
         background: rgba(0,0,0,0.8);
     }
 
     & a {
-        color: #007DCC;
+        color: $linkColor1;
     }
 }
 
