--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,15 +6,20 @@ $white1: #FAFAFA;
 $white2: #ECECEC;
 $white3: #EBE4D1;
 
-$grey1: #333333;
+$grey1: #292929;
 $grey2: #707070;
 $grey3: #C2BFBB;
+$grey4: #1D1D1D;
 
 $black1: #020202;
-$black2: #040416;
+$black2: #080808;
 $black3: #0E0E0E;
+$black4: #030307;
 
 $red1: #C41B1B;
+
+$blue1: #07080D;
+$blue2: #16171D;
 
 $linkColor1: #489BDA;
 $linkColor2: #6D92B8;
