Added: Styles and a gh-pages README

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -39,4 +39,5 @@ $masterColor: #C765FF;
         "input_styles",
         "media_queries",
         "noscript",
-        "dark"
+        "dark",
+        "word_generator"
