UI Update: A nice hamburger menu (WIP)

--- a/sass/imports/dark.scss
+++ b/sass/imports/dark.scss
@@ -40,7 +40,7 @@ body[dark] {
         border-left: 0.05em solid $black1;
     }
 
-    & main {
+    & .main {
         & p.generated {
             color: $white2;
         }
