--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,9 @@ $passedColor: #00BF04;
 $expertColor: #BAFF00;
 $masterColor: #C765FF;
 
+
+$drawer-width: 20em;
+
 @import "reset",
         "general",
         "main_view",
