--- a/sass/imports/slidebar.scss
+++ b/sass/imports/slidebar.scss
@@ -1,9 +1,74 @@
 
+input#drawer-toggle {
+    display: none;
+}
+
+label[for="drawer-toggle"] {
+    display: block;
+    position: fixed;
+    height: 2.2em;
+    width: 2.2em;
+    margin: 1em;
+    left: 0;
+
+    cursor: pointer;
+    user-select: none;
+    z-index: 1;
+
+    transition: left 410ms, opacity 210ms;
+
+    & .hamburger {
+        display: block;
+        position: absolute;
+        height: 0.24em;
+        width: 2.2em;
+
+        background: $grey2;
+        box-shadow: 0 0.7em 0 $grey2, 0 1.4em 0 $grey2;
+        transition: background 210ms, box-shadow 210ms;
+    }
+
+    &:hover .hamburger {
+        // background: $grey3;
+        // box-shadow: 0 0.7em 0 $grey3, 0 1.4em 0 $grey3;
+    }
+}
+
+
+#drawer {
+    position: fixed;
+    left: -$drawer-width;
+    width: $drawer-width;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    transition: left 410ms;
+    z-index: 1;
+}
+
+#drawer-toggle:checked {
+    & ~ label[for="drawer-toggle"] {
+        left: $drawer-width;
+        opacity: 0.7;
+        &:hover {
+            opacity: 1;
+        }
+    }
+
+    & ~ #drawer {
+        left: 0;
+    }
+
+    & ~ .maincolumn {
+        padding-left: $drawer-width;
+    }
+}
+
+
 .menucolumn {
     display: flex;
-    flex: 1;
     flex-direction: column;
-    min-width: 13em;
+    // min-width: 13em;
 
     color: $white2;
 
@@ -198,105 +263,59 @@
 .assistantcolumn {
     display: flex;
     flex: 1.2;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
-    min-width: 12.5em;
+    // min-width: 12.5em;
 
     color: $white1;
 
     background: $grey1;
     transition: all 1s;
 
-    &[hidden] {
-        overflow: hidden;
-        flex: 0;
-        min-width: 1.5em;
+    & header {
+        padding: 1em;
 
-        & .button {
-            padding: 0 0.5em;
-
-            & span::before {
-                content: "<";
-            }
-        }
-
-        & .panel {
-            background: $grey1;
-            opacity: 0.25;
-        }
-    }
-
-    & .button {
-        display: flex;
-        width: 1.2em;
-        align-items: center;
-        justify-content: center;
-
+        font-size: 150%;
         text-align: center;
 
-        cursor: pointer;
-        background: $black2;
-        transition: all 1s;
+        background: $black1;
+    }
 
-        & span {
-            font-family: Arial;
-            font-weight: 600;
+    & .reference {
+        margin: 0.5em 1em;
+        font-size: 90%;
 
-            &::before {
-                content: ">";
-            }
+        & p {
+            margin: 0.3em 0;
         }
     }
 
-    & .panel {
-        flex: 1;
-        transition: all 1s;
+    & table {
+        width: 100%;
 
-        & header {
-            padding: 1em;
+        font-size: 90%;
 
-            font-size: 150%;
-            text-align: center;
+        background: $grey1;
+        border-collapse: collapse;
 
-            background: $grey1;
+        & caption {
+            padding: 0.8em 0em;
         }
 
-        & .reference {
-            margin: 0.5em 1em;
-            font-size: 90%;
-
-            & p {
-                margin: 0.3em 0;
-            }
+        & thead th {
+            padding: 0.8em 0.2em;
+            border: 1px solid $white1;
         }
 
-        & table {
-            width: 100%;
+        & tbody td {
+            padding: 0.5em;
+            border: 1px solid $white1;
 
-            font-size: 90%;
+            &:first-child {
+                width: 1em;
 
-            background: $grey1;
-            border-collapse: collapse;
-
-            & caption {
-                padding: 0.8em 0em;
-            }
-
-            & thead th {
-                padding: 0.8em 0.2em;
-                border: 1px solid $white1;
-            }
-
-            & tbody td {
-                padding: 0.5em;
-                border: 1px solid $white1;
-
-                &:first-child {
-                    width: 1em;
-
-                    font-weight: 600;
-                    text-align: center;
-                }
+                font-weight: 600;
+                text-align: center;
             }
         }
     }
