--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@ $red1: #C41B1B;
 
 $blue1: #07080D;
 $blue2: #16171D;
+$blue3: #13A3FF;
 
 $linkColor1: #489BDA;
 $linkColor2: #6D92B8;
@@ -39,6 +40,8 @@ $drawer-width: 20em;
         "general",
         "main_view",
         "slidebar",
+        "drawer",
+        "radio_tabs",
         "input_styles",
         "media_queries",
         "noscript",
