--- a/sass/imports/noscript.scss
+++ b/sass/imports/noscript.scss
@@ -10,6 +10,8 @@ noscript {
     background: $grey1;
     background: rgba(0,0,0,0.5);
 
+    z-index: 3;
+
     & .no-js {
         padding: 2em;
 
