--- a/sass/imports/radio_tabs.scss
+++ b/sass/imports/radio_tabs.scss
@@ -27,8 +27,8 @@
             color: $white3;
             text-align: center;
 
-            border-collapse: collapse;
-            background: $black1;
+            border-bottom: 1px solid $blue3;
+            background: $blue1;
         }
     }
 
@@ -36,17 +36,15 @@
         display: flex;
         position: absolute;
 
-        height: 70%;
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        transition: left 150ms;
+        height: parent;
+        overflow: hidden;
 
         & .tab-panel {
-            position: relative;
             display: block;
+            position: relative;
             width: $drawer-width;
-            height: 100%;
+            height: 0;
+            overflow-y: hidden;
         }
     }
 
@@ -54,19 +52,18 @@
         & ~ .tab-container {
             left: 0;
             & .tab-panel#tab-1 {
-                height: initial;
+                height: 100%;
             }
         }
         & ~ .tab-buttons:before {
             left: 0;
-
         }
     }
     & input[type=radio][value='2']:checked {
         & ~ .tab-container {
             left: -$drawer-width;
             & .tab-panel#tab-2 {
-                height: initial;
+                height: 100%;
             }
         }
         & ~ .tab-buttons:before {
@@ -77,7 +74,7 @@
         & ~ .tab-container {
             left: -2*$drawer-width;
             & .tab-panel#tab-3 {
-                // height: initial;
+                height: 100%;
             }
         }
         & ~ .tab-buttons:before {
